hphp/hack/test/typecheck/reactive/rx_class1.php.exp
File "rx_class1.php", line 3, characters 3-6:
The `__Rx` attribute cannot be used on a class. (Typing[4231])
