hphp/hack/test/typecheck/reactive/rx_class1.php
<?hh

<<__Rx>>
class A {
}
